fix bug - svg icon color change for dark mode

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,11 @@ input:checked + .slider::before {
     brightness(107%) contrast(101%);
 }
 
+:root.dark-mode .theme-svg {
+  filter: invert(100%) sepia(73%) saturate(0%) hue-rotate(263deg)
+    brightness(107%) contrast(101%);
+}
+
 .news__container {
   margin: 60px 60px;
 }
